LinKreta_POC_Repository/force-app/main/default/objects/Subsidiary__c/Subsidiary__c.object-meta.xml
<CustomObject>
    <label>Subsidiary/Sister Concern</label>
    <nameField>
        <label>Subsidiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiaries/Sister Concerns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>