LinKreta_POC_Repository/force-app/main/default/objects/Subsidiary__c/fields/Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Association_Type__c</fullName>
    <label>Association Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>