LinKreta_POC_Repository/force-app/main/default/objects/Subsidiary__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Subsidiarys</relationshipName>
    <type>Lookup</type>
</CustomField>