LinKreta_POC_Repository/force-app/main/default/objects/Subsidiary__c/fields/new_client__c.field-meta.xml
<CustomField>
    <fullName>new_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Subsidiaries/Sister Concerns</relationshipLabel>
    <relationshipName>Subsidiarys</relationshipName>
    <type>Lookup</type>
</CustomField>