LinKreta_POC_Repository/force-app/main/default/objects/Subsidiary__c/fields/percentage_of_shares__c.field-meta.xml
<CustomField>
    <fullName>percentage_of_shares__c</fullName>
    <label>Percentage(%) of Shares held</label>
    <length>80</length>
    <type>Text</type>
</CustomField>